# nanoGPT-jax-reduced

./: .gitignore  bench.py  check_equality.py  gpt_jax.py  model.py  model_pt.py  more.txt  nohup.out  pyproject.toml  sample.py  sample_pretrained.py  test.py  train.py  utils.py
